# fj-fftw3

./: .gitignore  CMakeLists.txt  FFTW3Config.cmake.in  Makefile.am  README.md  README.md.orig  configure.ac  fftw.pc.in
dft/: conf.c
dft/scalar/codelets/: n1_10.c  n1_11.c  n1_12.c  n1_13.c  n1_14.c  n1_15.c  n1_16.c  n1_2.c  n1_20.c  n1_25.c  n1_3.c  n1_32.c  n1_4.c  n1_5.c  n1_6.c  n1_64.c  n1_7.c  n1_8.c  n1_9.c  q1_2.c  q1_3.c  q1_4.c  q1_5.c  q1_6.c  q1_8.c  t1_10.c  t1_12.c  t1_15.c  t1_16.c  t1_2.c  t1_20.c  t1_25.c  t1_3.c  t1_32.c  t1_4.c  t1_5.c  t1_6.c  t1_64.c  t1_7.c  t1_8.c  (+10 more)
dft/simd/: Makefile.am
dft/simd/common/: n1bv_10.c  n1bv_11.c  n1bv_12.c  n1bv_128.c  n1bv_13.c  n1bv_14.c  n1bv_15.c  n1bv_16.c  n1bv_2.c  n1bv_20.c  n1bv_25.c  n1bv_3.c  n1bv_32.c  n1bv_4.c  n1bv_5.c  n1bv_6.c  n1bv_64.c  n1bv_7.c  n1bv_8.c  n1bv_9.c  n1fv_10.c  n1fv_11.c  n1fv_12.c  n1fv_128.c  n1fv_13.c  n1fv_14.c  n1fv_15.c  n1fv_16.c  n1fv_2.c  n1fv_20.c  n1fv_25.c  n1fv_3.c  n1fv_32.c  n1fv_4.c  n1fv_5.c  n1fv_6.c  n1fv_64.c  n1fv_7.c  n1fv_8.c  n1fv_9.c  (+130 more)
dft/simd/neon/: codlist.c
dft/simd/sve/: Makefile.am  codlist.c  genus.c  n1bv_10.c  n1bv_11.c  n1bv_12.c  n1bv_128.c  n1bv_13.c  n1bv_14.c  n1bv_15.c  n1bv_16.c  n1bv_2.c  n1bv_20.c  n1bv_25.c  n1bv_3.c  n1bv_32.c  n1bv_4.c  n1bv_5.c  n1bv_6.c  n1bv_64.c  n1bv_7.c  n1bv_8.c  n1bv_9.c  n1fv_10.c  n1fv_11.c  n1fv_12.c  n1fv_128.c  n1fv_13.c  n1fv_14.c  n1fv_15.c  n1fv_16.c  n1fv_2.c  n1fv_20.c  n1fv_25.c  n1fv_3.c  n1fv_32.c  n1fv_4.c  n1fv_5.c  n1fv_6.c  n1fv_64.c  (+133 more)
doc/: rfftwnd.eps  version.texi
genfft/: c.ml  c.mli  genutil.ml  simd.ml
kernel/: ifftw.h  kalloc.c
mpi/: Makefile.am
rdft/: Makefile.am  conf.c
rdft/scalar/r2cb/: hb2_16.c  hb2_20.c  hb2_25.c  hb2_32.c  hb2_4.c  hb2_5.c  hb2_8.c  hb_10.c  hb_12.c  hb_15.c  hb_16.c  hb_2.c  hb_20.c  hb_25.c  hb_3.c  hb_32.c  hb_4.c  hb_5.c  hb_6.c  hb_64.c  hb_7.c  hb_8.c  hb_9.c  hc2cb2_16.c  hc2cb2_20.c  hc2cb2_32.c  hc2cb2_4.c  hc2cb2_8.c  hc2cb_10.c  hc2cb_12.c  hc2cb_16.c  hc2cb_2.c  hc2cb_20.c  hc2cb_32.c  hc2cb_4.c  hc2cb_6.c  hc2cb_8.c  hc2cbdft2_16.c  hc2cbdft2_20.c  hc2cbdft2_32.c  (+47 more)
rdft/scalar/r2cf/: hc2cf2_16.c  hc2cf2_20.c  hc2cf2_32.c  hc2cf2_4.c  hc2cf2_8.c  hc2cf_10.c  hc2cf_12.c  hc2cf_16.c  hc2cf_2.c  hc2cf_20.c  hc2cf_32.c  hc2cf_4.c  hc2cf_6.c  hc2cf_8.c  hc2cfdft2_16.c  hc2cfdft2_20.c  hc2cfdft2_32.c  hc2cfdft2_4.c  hc2cfdft2_8.c  hc2cfdft_10.c  hc2cfdft_12.c  hc2cfdft_16.c  hc2cfdft_2.c  hc2cfdft_20.c  hc2cfdft_32.c  hc2cfdft_4.c  hc2cfdft_6.c  hc2cfdft_8.c  hf2_16.c  hf2_20.c  hf2_25.c  hf2_32.c  hf2_4.c  hf2_5.c  hf2_8.c  hf_10.c  hf_12.c  hf_15.c  hf_16.c  hf_2.c  (+47 more)
rdft/scalar/r2r/: e01_8.c  e10_8.c
rdft/simd/: Makefile.am
rdft/simd/common/: hc2cbdftv_10.c  hc2cbdftv_12.c  hc2cbdftv_16.c  hc2cbdftv_2.c  hc2cbdftv_20.c  hc2cbdftv_32.c  hc2cbdftv_4.c  hc2cbdftv_6.c  hc2cbdftv_8.c  hc2cfdftv_10.c  hc2cfdftv_12.c  hc2cfdftv_16.c  hc2cfdftv_2.c  hc2cfdftv_20.c  hc2cfdftv_32.c  hc2cfdftv_4.c  hc2cfdftv_6.c  hc2cfdftv_8.c
rdft/simd/sve/: codlist.c  hc2cbdftv_10.c  hc2cbdftv_12.c  hc2cbdftv_16.c  hc2cbdftv_2.c  hc2cbdftv_20.c  hc2cbdftv_32.c  hc2cbdftv_4.c  hc2cbdftv_6.c  hc2cbdftv_8.c  hc2cfdftv_10.c  hc2cfdftv_12.c  hc2cfdftv_16.c  hc2cfdftv_2.c  hc2cfdftv_20.c  hc2cfdftv_32.c  hc2cfdftv_4.c  hc2cfdftv_6.c  hc2cfdftv_8.c
simd-support/: Makefile.am  simd-altivec.h  simd-avx-128-fma.h  simd-avx.h  simd-avx2-128.h  simd-avx2.h  simd-avx512.h  simd-common.h  simd-generic128.h  simd-generic256.h  simd-kcvi.h  simd-maskedsve.h  simd-neon.h  simd-sse2.h  simd-sve.h  simd-vsx.h  sve.c
tests/: Makefile.am
threads/: Makefile.am
tools/: Makefile.am  fftw_wisdom.1.in
